# PathWise-AI

./: .env.example  .gitignore  README.md  cors_proxy.py  cors_proxy0.py  pyproject.toml  render.yaml  requirements.txt
PathWise-Backend/: package-lock.json  package.json  server.js
PathWise-Backend/controller/: userController.js
PathWise-Backend/models/: User.js
PathWise-Backend/utils/: generateToken.js
PathWise-backend/: .gitignore  package-lock.json  package.json  server.js
PathWise-backend/controller/: userController.js
PathWise-backend/middleware/: authMiddleware.js
PathWise-backend/routes/: userRoutes.js
PathWise-backend/utils/: sendVerificationEmail.js
PathWise-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
PathWise-frontend/public/fonts/: Montserrat-Regular.ttfZone.Identifier
PathWise-frontend/src/: App.jsx
PathwiseAI/PathWise-frontend/: package-lock.json  package.json
nigeria_pathwise/: pyproject.toml
nigeria_pathwise/configs/: config.yml
nigeria_pathwise/data/: nigeria_career_guide.csv
nigeria_pathwise/src/nigeria_pathwise/: nigeria_pathwise_function.py  register.py
nigeria_pathwise/src/nigeria_pathwise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nigeria_pathwise/src/nigeria_pathwise/configs/: config.yml
pathwise/: pyproject.toml
pathwise/configs/: config.yml
pathwise/src/pathwise/: pathwise_function.py  register.py
pathwise/src/pathwise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pathwise/src/pathwise/configs/: config.yml
pathwise_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+38 files in other folders)
